# ChangeLog for dev-java/commons-logging
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-logging/ChangeLog,v 1.51 2007/04/07 04:28:54 wltjr Exp $

  07 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -commons-logging-1.0.4-r1.ebuild, -commons-logging-1.0.4-r2.ebuild,
  commons-logging-1.1-r2.ebuild:
  Stable on amd64, bug #171643. Brought forward ~ia64 keyword, and removed
  older versions.

  24 Mar 2007; nixnut <nixnut@gentoo.org> commons-logging-1.1-r2.ebuild:
  Stable on ppc wrt bug 171643

  24 Mar 2007; Markus Rothe <corsair@gentoo.org>
  commons-logging-1.1-r2.ebuild:
  Stable on ppc64; bug #171643

  22 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  commons-logging-1.1-r2.ebuild:
  stable x86, bug 171643

  13 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
  commons-logging-1.1-r2.ebuild:
  Ebuild cleanup and correct LICENSE to Apache-2.0

  10 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  commons-logging-1.1-r2.ebuild:
  Fixed javadocs to install using java-pkg_dojavadoc.

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  commons-logging-1.1-r2.ebuild:
  Add ~x86-fbsd keyword.

  26 Oct 2006; Vlastimil Babka <caster@gentoo.org>
  commons-logging-1.1-r2.ebuild:
  Make javadoc actually work with USE=doc

  25 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  +files/commons-logging-1.1-gentoo.patch:
  Forgot to include other patch...

  25 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  +files/commons-logging-1.1-servletapi.patch:
  Forgot to include patch.

*commons-logging-1.1-r2 (25 Oct 2006)

  25 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  +commons-logging-1.1-r2.ebuild:
  Version bump. Now has use flags for all possible logger backends.

  17 Oct 2006; Joshua Nichols <nichoj@gentoo.org>
  commons-logging-1.0.4-r2.ebuild:
  Keyworded ~ia64.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  commons-logging-1.0.4-r1.ebuild, commons-logging-1.0.4-r2.ebuild: