@@ -2,6 +2,6 @@ AUX commons-logging-1.1-gentoo.patch 927 RMD160 7504a6f319f1ca894b218d9d30641c23
 AUX commons-logging-1.1-manifest 299 RMD160 9f2d1a8889f64a8bb23b6563d27c851a09b7adaa SHA1 3ad2a066fb45ebe6d994d27ef6d09c67b5d2536c SHA256 34a591ce9b09ae23258d1414958bb537fe85ffd421d4de97307985dcb6bbc99d
 AUX commons-logging-1.1-servletapi.patch 1988 RMD160 78c13fc15add613a1cb17d73c3a31c8ee1cc69bd SHA1 cab5198471596f46a2faae282e8c6a8f786cbf51 SHA256 836afb926d95aae2dcade9234179df3274402f19bbcc54d77a19e18af30317b3
 DIST commons-logging-1.1-src.tar.gz 173556 RMD160 5764ee09a541365adee55aded1a9ba8908deea0d SHA1 cbaf5c65979e6733b07b27b01af083965a55fbad SHA256 56aa7d3f2ab3d50798ce618d6dd60ed6814287f7cc25802d403cd3083238c5fa
-EBUILD commons-logging-1.1-r3.ebuild 2202 RMD160 c2b422dc84320c22c8304cc5bc0847f198180215 SHA1 24a6996b236a982efe4c558f40e4539f6fbb44b1 SHA256 a93c7d9c7a60ce8924b3a73c78a543d7a1619082feb50f28a90071701c50bbf1
-MISC ChangeLog 7116 RMD160 9f7d14e6ef7e73240401177dd22e8d908b28ffc8 SHA1 e1af038eaf0a6b53d976d3bed94ecf71d8eceb84 SHA256 639f6d10bb8eb1759a07af6fb10bfd63e12dc862aea18dbe4fd6db74758459b4
+EBUILD commons-logging-1.1-r3.ebuild 2279 RMD160 4121fe8b4206d0a86bcf308cd518fe9332cae6d7 SHA1 e77b5fe1a112a6d1c8e54d2285f868ad8d7534cd SHA256 fe3c8c2bf10a392e0b35a5e9df53eb380a075e20f67c8005bb5b3faabf3494ad
+MISC ChangeLog 7237 RMD160 425391b3f2d03b360bb7d6b585fc59af228f314f SHA1 cd12b681a87d0c8afa329f522b7cf1b3fd39a8fe SHA256 81dd4f45d3b0ddddfaf8d926ab8ccbb3f9a6dc08dcfb9898e766334d5f3af264
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
