@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-logging
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/commons-logging/ChangeLog,v 1.51 2007/04/07 04:28:54 wltjr Exp $
+
+  08 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
+  commons-logging-1.1-r3.ebuild:
+  sync changes from the main tree
 
   07 Apr 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   -commons-logging-1.0.4-r1.ebuild, -commons-logging-1.0.4-r2.ebuild,
